--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,8 @@
     "useDefineForClassFields": false,
     "lib": [
       "ES2022",
-      "dom"
+      "dom",
+      "es5", "es6", "dom.iterable"
     ]
   },
   "angularCompilerOptions": {
