--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^15.2.0",
     "@auth0/angular-jwt": "^5.1.2",
     "@ngx-translate/core": "^14.0.0",
+    "ngx-material-file-input": "^4.0.1",
     "ngx-toastr": "^16.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
